syntax = "proto3";

import "number_msg.proto";

package pb;

option go_package = "./pb";

service ArithmeticService {
    rpc GetAddition(OperationParameters) returns (Answer) {}   
    rpc GetSubstraction(OperationParameters) returns (Answer) {}   
    rpc GetMultiplication(OperationParameters) returns (Answer) {}   
    rpc GetDivision(OperationParameters) returns (Answer) {}   
}