syntax = "proto3"; // Explictly defining which protocol buffer language to use

package pb; // pb is the name of the package where code created using this files is stored

option go_package = "./pb"; // defining the location of the pb package

message Answer {
    int32 value = 1; // here 1 is the index
  }

message OperationParameters {
    int32 a = 1;
    int32 b = 2;
  }
// to generate the go code :--> protoc --go_out=plugins:gprc:directory
